2004-11-29  Andrew Cagney  <cagney@gnu.org>

	* MAINTAINERS: Add Randolph Chung (pa), Jeff Johnston (ia64), Kei
	Sakamoto (m32r), Joel Brobecker (mips), and Ulrich Weigand (s390)
	as can-commit architecture developers.
	
2004-11-29  Mark Kettenis  <kettenis@gnu.org>

	* sparc-tdep.c (X_RS1, X_SIMM13): New macros.
	(sparc32_skip_prologue): Skip instructions that store arguments in
	registers into their corresponding stack slots.

	* config/m68k/nbsdaout.mh (NAT_FILE): Set to solib.h instead of
	tm-solib.h.
	* config/m68k/obsd.mh (NAT_FILE): Likewise.

	* sparc-tdep.h (sparc32nbsd_elf_init_abi): New prototype.
	* sparcnbsd-tdep.c (sparc32nbsd_elf_init_abi): Make global.
	* sparcobsd-tdep.c (sparc32obsd_init_abi): Call
	sparc32nbsd_elf_init_abi.  Remove duplicate code.

	* config/sparc/nbsdaout.mh (NAT_FILE): Set to solib.h.
	* config/sparc/nbsdelf.mh (NAT_FILE): Remove variable.
	* config/sparc/nm-nbsd.h: Remove file.
	* config/sparc/nm-nbsdaout.h: Remove file.

	* sparc-nat.c (inf_ptrace_xfer_partial): New variable.
	(sparc_xfer_partial): New function.
	(sparc_target): Save value of to_xfer_partial from ptrace vector.
	Set to_xfer_partial.

	* fork-child.c (fork_inferior): Fork instead of vfork if
	PRE_TRACE_FUN is non-null.

2004-11-24  Fred Fish  <fnf@specifixinc.com>

	* rs6000-tdep.c (skip_prologue): Use line table info to skip over
	compiler generated function calls made as part of a prologue.

2004-11-23  Mark Kettenis  <kettenis@gnu.org>

	* inf-ttrace.c: New file.
	* inf-ttrace.h: New file.
	* hppa-hpux-nat.c [HAVE_TTRACE]: Include <sys/ttrace>.
	Include "inf-ttrace.h".
	(ss_mpsfu_high): Define to ss_tlsp if necessary.
	(hppa_hpux_fetch_register, hppa_hpux_store_register): Use
	ptid_get_pid instead of PIDGET.  Modify to handle both ttrace and
	ptrace systems.
	(_initialize_hppa_hpux_nat) [HAVE_TTRACE]: Call inf_ttrace_traget
	instead of inf_ptrace_target.
	* config/pa/hpux.mh (NATDEPFILES): Add inf-ttrace.o.
	* Makefile.in (inf_ttrace_h): New variable.