@@ -18,7 +18,13 @@
    Foundation, Inc., 59 Temple Place - Suite 330,
    Boston, MA 02111-1307, USA.  */
 
-#include "config/nm-sysv4.h"
+/* Use SVR4 style shared library support */
+
+#include "solib.h"
+
+/* SVR4 has /proc support, so use it instead of ptrace. */
+
+#define USE_PROC_FS
 
 #ifdef NEW_PROC_API	/* Solaris 6 and above can do HW watchpoints */
 
