@@ -1,3 +1,12 @@
+2004-11-30  Andrew Cagney  <cagney@gnu.org>
+
+	* config/nm-sysv4.h: Delete file.
+	* config/i386/nm-i386v4.h: Inline "config/nm-sysv4.h".
+	* config/i386/nm-i386v42mp.h: Inline "config/nm-sysv4.h".
+	* config/i386/nm-i386sol2.h: Inline "config/nm-sysv4.h".
+	* config/ia64/nm-aix.h: Inline "config/nm-sysv4.h".
+	* config/mips/nm-irix5.h: Inline "config/nm-sysv4.h".
+
 2004-11-29  Andrew Cagney  <cagney@gnu.org>
 
 	* MAINTAINERS: Add Randolph Chung (pa), Jeff Johnston (ia64), Kei
